@startuml
'https://plantuml.com/class-diagram

class Record{
    - id:int
    - name:String
    - score:int
    - date:Date
    + Record(int id,String name,int score,Date date)
    + getId():int
    + getName():String
    + setName(String name):void
    + getScore():int
    + setScore(int score):void
    + getDate():Date
    + setDate(Date date):void
}
interface RecordDao{
    + {abstract} add(String name, int score, Date date):void
    + {abstract} getByIndex(int index):Record
    + {abstract} deleteById(int recordId):void
    + {abstract} getSorted():List<Record>
    + {abstract} toStringArray():String[][]
    + {abstract} writeToFile(String path):void
    + {abstract} printToConsole():void
}
class RecordDaoImpl{
    - records:List<Record>
    - maxId:int
    + RecordDaoImpl()
    + add(String name, int score, Date date):void
    + getByIndex(int index):Record
    + deleteById(int recordId):void
    + getSorted():List<Record>
    + toStringArray():String[][]
    + {static} readFromFile(String path):RecordDaoImpl
    + writeToFile(String path):void
    + printToConsole():void
}
class Main{
    + {static} main(String[] args):void
}

RecordDao <|.. RecordDaoImpl
Record <-- RecordDaoImpl
Main ..> RecordDao


@enduml